--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="message-box-1" onclick="swap2()">
 
         <div class="message-box-greeting">
-            <p>Wah ada yang tambah tua ni, HBD yaa novitaaa!! Semoga yang apa disemogakan segera tersemogakan!! Ditunggu traktirannya hehe..
+            <p>Wah ada yang tambah tua ni, HBD yaa!! Semoga yang apa disemogakan segera tersemogakan!! Ditunggu traktirannya hehe..
                 Semangat! untuk apapun itu. <br> Sorry cuma bisa ngasih ginian</p>
 
         </div>
