--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <div class="message-box-1" onclick="swap2()">
 
         <div class="message-box-greeting">
-            <p>Wah ada yang tambah tua ni, HBD yaa!! Semoga yang apa disemogakan segera tersemogakan!! Ditunggu traktirannya hehe..
-                Semangat! untuk apapun itu. <br> Sorry cuma bisa ngasih ginian</p>
+            <p>Wah ada yang tambah tua ni, HBD yaa yoan bott !! Semoga yang apa disemogakan segera tersemogakan!! Ditunggu traktirannya hehe..
+                Semangat! untuk apapun itu. <br> Sorry cuma bisa ngasih ginian :p</p>
 
         </div>
     </div>
