--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="message-box-1" onclick="swap2()">
 
         <div class="message-box-greeting">
-            <p>Wah ada yang tambah tua ni, HBD yaaaa Ayaa Poqeee :3  Semoga yang apa disemogakan segera tersemogakan!! Ditunggu hadiah dari ku selanjutnya wkwk..
+            <p>Wah ada yang tambah tua ni, HBD yaaaa Ayaa Poqeee :3  Semoga apa yang disemogakan segera tersemogakan!! Ditunggu hadiah dari ku selanjutnya wkwk..
                 Semangat! untuk apapun itu. <br> </p>
 
         </div>
